# proxmox-redfish

./: .doockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: params.env.example  proxmox-redfish.service.example
config/ssl/: README.md
docs/admins/: README.md
docs/contrib/: README.md
docs/users/: README.md
scripts/: dev-setup.sh  install.sh  setup_ssl.sh  test_simple_concurrent.py  update_service.sh
src/proxmox_redfish/: __init__.py  proxmox_redfish.py
tests/integration/: test_concurrent_iso_access.py  test_hash_conflict.py  test_real_vm_concurrent_iso.py
tests/unit/: test_proxmox_redfish.py  test_proxmox_redfish_simple.py
tools/: test.sh
